--- a/src/components/StatisticsPage/StatisticsPage.module.scss
+++ b/src/components/StatisticsPage/StatisticsPage.module.scss
@@ -1,20 +1,39 @@
 .container{
-    height: 75vh;
+    height: 140vh;
     width: 100%;
     // background-color: blue;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 
     h2 {
         text-align: center;
     }
 
+    h4 {
+        margin-top: 35px;
+        text-decoration: underline;
+    }
+
     .graph {
         height: 100%;
-        width: 60%;
+        width: 65%;
+        
         
         .graphcontainer {
-            height: 50%;
+            width: 100%;
+            height: 30%;
+        }
+        
+    }
+
+    .graph2 {
+        height: 80%;
+        width: 100%;
+        
+        
+        .graphcontainer2 {
+            width: 100%;
+            height: 33%;
         }
         
     }
@@ -22,7 +41,8 @@
     .cardcontainer {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        // justify-content: space-between;
+        width: 25%;
 
         @media screen and (max-width: 700px){
             width: 175px;
