--- a/src/components/StatisticsPage/StatisticsPage.module.scss
+++ b/src/components/StatisticsPage/StatisticsPage.module.scss
@@ -1,9 +1,38 @@
 .container{
-    height: 140vh;
+    // height: 70vh;
     width: 100%;
+    height: min-content;
+    // padding: 0 2%;
     // background-color: blue;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    // justify-content: space-between;
+
+    .topHeader {
+        width: 100%;
+        height: 20%;
+        margin-bottom: 20px;
+    }
+
+    .graphyee {
+        width: 100%;
+        // border: 2px solid blue;
+        display: flex;
+        justify-content: space-between;
+
+        .graphyee1, .graphyee2 {
+            width: 49%;
+            height: 400px;
+            // border: 2px solid black;
+
+            .box {
+                height: 400px;
+                width: 100%;
+            }
+        }
+
+
+    }
 
     h2 {
         text-align: center;
@@ -27,7 +56,7 @@
     }
 
     .graph2 {
-        height: 80%;
+        height: 120vh;
         width: 100%;
         
         
